2010-10-06  Carlos Garcia Campos  <cgarcia@igalia.com>

Reviewed by Xan Lopez.

        [GTK] Port to gtk+3 (2.91.0)
        https://bugs.webkit.org/show_bug.cgi?id=47249

        Do not use GdkDrawable deprecated API

        Some methods of GdkDrawable are deprecated in gtk2 and have been
        remmoved in gtk3. Equivalent API has been added to GdkWindow.

        * platform/gtk/GtkVersioning.c:
        (getDefaultGDKPointerDevice):
        * platform/gtk/GtkVersioning.h:
        * platform/gtk/PlatformScreenGtk.cpp:
        (WebCore::getVisual):
        (WebCore::screenAvailableRect):
2010-10-06  Carlos Garcia Campos  <cgarcia@igalia.com>

        Reviewed by Xan Lopez.

        Port to gtk+3 (2.91.0)
        https://bugs.webkit.org/show_bug.cgi?id=47249

        Do not use GdkDrawable deprecated API

        Some methods of GdkDrawable are deprecated in gtk2 and have been
        remmoved in gtk3. Equivalent API has been added to GdkWindow.

        * tests/testcopyandpaste.c:
        (runPasteTestCallback):
        * webkit/webkitwebview.cpp:
        (webkit_web_view_button_press_event):

Canonical link: https://commits.webkit.org/59807@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69201 268f45cc-cd09-0410-ab3c-d52691b4dbfc